--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,7 @@
 <head>
   <title>Twitter streamer</title>
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
 <body>
